# Automated-Fuzzer

./: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  PLAN.md  README.md  aio_ci_fix.sh  check_crates.py  ci_cargo_fuzz_loop.sh  ci_merge_filter_upload.sh  ci_process.md  ci_upload_crashes.sh  clippy.toml  dedup_files.py  download_helper.py  findings.md  fuzz_biome_settings_ci.toml  fuzz_boa_settings_ci.toml  fuzz_chromaprint_settings_ci.toml  fuzz_dicom_rs_settings_ci.toml  fuzz_dicom_settings_ci.toml  fuzz_dlint_settings_ci.toml  fuzz_fast_image_resizer_settings_ci.toml  fuzz_font_kit_settings_ci.toml  fuzz_full_moon_settings_ci.toml  fuzz_gdscript_formatter_linter_settings_ci.toml  fuzz_gdscript_formatter_settings_ci.toml  fuzz_go_settings_ci.toml  fuzz_hayro_settings_ci.toml  fuzz_image_hasher_settings_ci.toml  fuzz_image_settings_ci.toml  fuzz_js_settings_ci.toml  fuzz_little_exif_settings_ci.toml  fuzz_lofty_settings_ci.toml  fuzz_lopdf_settings_ci.toml  fuzz_moxcms_settings_ci.toml  fuzz_nom_exif_settings_ci.toml  fuzz_oxc_settings_ci.toml  fuzz_pdf_extract_settings_ci.toml  fuzz_pdf_rs_settings_ci.toml  (+48 more)
.github/workflows/: a_cargo_fuzz.yml  automated_fuzzer.yml  cargo_fuzz.yml  cargo_fuzz.yml.dsl  cargo_fuzz.yml2  common_after.yml  common_before.yml  dicom.yml  font_kit.yml  full_moon.yml  full_moon.yml2  fuzz.yml  go.yml  go.yml2  image.yml  js.yml  js.yml2  lofty.yml  lofty.yml2  lofty_afl.yml  lofty_fuzz.yml  lopdf.yml  oxc.yml  oxc.yml2  pdf.yml  pdf_rs.yml  rsbuzz.yml  rsbuzz.yml2  ruff.yml  ruff2.yml  ruff_all.yml  ruff_all.yml2  ruff_all.yml_d  ruff_all.yml_dis  ruff_alt.yml  ruff_alt2.yml  ruff_alt_all.yml  ruff_alt_no_exceptions.yml  ruff_alt_no_exceptions.yml_disabled  ruff_binary.yml  (+21 more)
.github/workflows2/: cargo_fuzz.yml  ruff_all.yml  ruff_build.yml  stable_fuzzer.yml
broken_files/: ANN002_E274__7455.py  ANN401_W605__6987.py  B002_ERA001__7455.py  C405__8402.py  C406__7455.py  C413__7455.py  C417__7455.py  C418__7455.py  D201__7455.py  D202__7172.py  D208__8844.py  D211__7455.py  D300__8402.py  D301__8402.py  E223_E711__8402.py  E223__8402.py  E703_F407__7455.py  E714__7455.py  EM101__7455.py  EM102__6988.py  EM102__7736.py  EM103__7455.py  F841_Q000__7128.py  FURB113__7095.py  FURB140__7455.py  FURB171__8402.py  I001_PLR1722_UP036__7130.py  PD002__8402.py  PIE804__8402.py  PLR0133__7455.py  PLR1706__8402.py  PT006__7455.py  PT014__7455.py  PT027__7198.py  Q002_PTH116__6785.py  RET503_SIM108__7455.py  RUF005__7455.py  RUF010__7455.py  RUF013__7455.py  RUF015__8402.py  (+13 more)
crates/boa/: Cargo.toml  fuzz_settings_ci.toml
crates/boa/src/: main.rs
crates/chromaprint/: Cargo.toml
crates/dicom/: Cargo.toml
crates/dicom_manual/: Cargo.toml
crates/fast_image_resizer/: Cargo.toml
crates/fast_image_resizer/src/: main.rs
crates/font_kit/: Cargo.toml  fuzz_settings_ci.toml
crates/full_moon/: Cargo.toml
crates/full_moon/src/: main.rs
crates/fuzz_utils/: Cargo.toml
crates/hayro/: Cargo.toml  fuzz_settings_ci.toml
crates/image/: Cargo.toml
crates/image/src/: main.rs
crates/image_hasher/: Cargo.toml  fuzz_settings_ci.toml
crates/infer/: Cargo.toml  fuzz_settings_ci.toml
crates/little_exif/: Cargo.toml
crates/lofty/: Cargo.toml
crates/lofty/src/: main.rs
crates/moxcms/: Cargo.toml  fuzz_settings_ci.toml
crates/moxcms/src/: main.rs
crates/nom_exif/: Cargo.toml
crates/nom_exif/src/: main.rs
crates/pdf_writer/: Cargo.toml  fuzz_settings_ci.toml
crates/pdf_writer/src/: main.rs
crates/rawler/: Cargo.toml  fuzz_settings_ci.toml
crates/rawler/src/: main.rs
crates/resvg/: Cargo.toml  fuzz_settings_ci.toml
crates/resvg/src/: main.rs
crates/vidduplicate/: Cargo.toml
crates/vidduplicate/src/: main.rs
crates/zune/: Cargo.toml  fuzz_settings_ci.toml
crates/zune/src/: main.rs
format/: .rustfmt.toml  Cargo.toml  settings.toml  settings_black_difference_ci.toml  settings_ci.toml  settings_not_stable_ci.toml  settings_parse_difference.toml
format/src/: common.rs  error_in_format_tool.rs  find_black_ruff_differences.rs  find_parse_difference.rs  main.rs  settings.rs  test_ruff_format_stability.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: chromaprint.rs  dicom.rs  font_kit.rs  full_moon.rs  hayro.rs  image.rs  image_hasher.rs  little_exif.rs  lofty.rs  lopdf.rs  nom_exif.rs  rawler.rs  rsbuzz.rs  slint.rs  slintc.rs  symphonia.rs  vidduplicate.rs  vidduplicategst.rs  zip_rs.rs  zune.rs
old/: Cargo.toml  findings.md  fuzz_boa_settings_ci.toml  fuzz_chromaprint_settings_ci.toml  fuzz_pyrefly_settings_ci.toml  fuzz_settings_ci_template_custom.toml  fuzz_slint_settings_ci.toml
old/src/: obj.rs  (+5 more)
old/src/crates/boa/: Cargo.toml
old/src/crates/boa/src/: main.rs
src/: broken_files.rs  ci.rs  clean_base_files.rs  common.rs  dlint.rs  error_signature.rs  finding_different_output.rs  finding_text_status.rs  fuzz_cargo.rs  ignore_list.rs  main.rs  minimal_rules.rs  minimize_cmd.rs  mypy.rs  obj.rs  oxc.rs  remove_non_crashing_files.rs  report.rs  rome.rs  ruff.rs  settings.rs  validate.rs  verify_reported_broken_files.rs
src/crates/dicom/: Cargo.toml
src/crates/dicom/src/: main.rs
src/crates/dicom_manual/: Cargo.toml
src/crates/dicom_manual/src/: main.rs
src/crates/hayro/: Cargo.toml
src/crates/hayro/src/: main.rs
src/crates/image/: Cargo.toml
src/crates/image/src/: main.rs
src/crates/little_exif/: Cargo.toml
src/crates/little_exif/src/: main.rs
src/crates/nom_exif/: Cargo.toml
src/crates/nom_exif/src/: main.rs
src/crates/pdf_rs/: Cargo.toml
src/crates/pdf_rs/src/: main.rs
src/crates/resvg/: Cargo.toml
src/crates/resvg/src/: main.rs
src/crates/rust_parser/: Cargo.toml
src/crates/rust_parser/src/: main.rs
src/crates/symphonia/: Cargo.toml
src/crates/symphonia/src/: main.rs
src/crates/vidduplicategst/: Cargo.toml
src/crates/vidduplicategst/src/: main.rs
src/crates/ziprs/: Cargo.toml
src/crates/ziprs/src/: main.rs
src/crates/zune/: Cargo.toml
src/crates/zune/src/: main.rs
test_issue_example/: create_issue.sh  issue_body.md
test_red_knot/: Cargo.toml
test_red_knot/src/: main.rs
(+135 files in other folders)
