[package]
name = "automated_fuzzer"
authors = ["Rafał Mikrut <mikrutrafal@protonmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
jwalk = "0.8"
rayon = "1.10"
rand = "0.9"
config = { version = "0.15", default-features = false, features = ["toml"] }
zip = { version = "4.1.0", default-features = false, features = ["deflate"] }
handsome_logger = "0.9"
log = "0.4"
state ="0.6.0"
once_cell = "1.19.0"

humansize = "2.1.3"

[profile.release]
debug = true
overflow-checks = true
