[package]
name = "formatter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwalk = "0.8.1"
rayon = "1.8.0"
handsome_logger = "0.7.0"
log = "0.4.20"
time = "0.3.28"
md5 = "0.7.0"
config = "0.13.3"
rand = "0.8.5"
