[package]
name = "automated_fuzzer-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
lofty = { git = "https://github.com/Serial-ATA/lofty-rs/" }
font-kit = { git = "https://github.com/servo/font-kit.git", features = ["source"] }
image = { git = "https://github.com/image-rs/image", default-features = false, features = ["avif", "bmp", "dds", "ff", "gif", "hdr", "ico", "png", "pnm", "qoi", "tga", "tiff", "webp"] } # All except jpg, webp and openexr
lopdf = { git = "https://github.com/J-F-Liu/lopdf.git" }
rustybuzz = { git = "https://github.com/RazrFalcon/rustybuzz.git" }
#pdf = { git = "https://github.com/pdf-rs/pdf/" }
symphonia = { git = "https://github.com/pdeljanov/Symphonia.git", features = ["all"] }
zip = { git = "https://github.com/zip-rs/zip2.git" }
full_moon = { git = "https://github.com/Kampfkarren/full-moon.git", features = ["roblox", "lua54"] }

dicom-core = { git = "https://github.com/Enet4/dicom-rs" }
dicom-object = { git = "https://github.com/Enet4/dicom-rs" }
dicom-ul = { git = "https://github.com/Enet4/dicom-rs" }
dicom-encoding = { git = "https://github.com/Enet4/dicom-rs" }
dicom-dictionary-std = { git = "https://github.com/Enet4/dicom-rs" }
dicom-transfer-syntax-registry = { git = "https://github.com/Enet4/dicom-rs" }
dicom-dump = { git = "https://github.com/Enet4/dicom-rs" }
dicom-json = { git = "https://github.com/Enet4/dicom-rs" }

[[bin]]
name = "lofty"
path = "fuzz_targets/lofty.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dicom"
path = "fuzz_targets/dicom.rs"
test = false
doc = false
bench = false

[[bin]]
name = "font_kit"
path = "fuzz_targets/font_kit.rs"
test = false
doc = false
bench = false

[[bin]]
name = "zip_rs"
path = "fuzz_targets/zip_rs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "full_moon"
path = "fuzz_targets/full_moon.rs"
test = false
doc = false
bench = false

[[bin]]
name = "image"
path = "fuzz_targets/image.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lopdf"
path = "fuzz_targets/lopdf.rs"
test = false
doc = false
bench = false

#[[bin]]
#name = "pdf_rs"
#path = "fuzz_targets/pdf_rs.rs"
#test = false
#doc = false
#bench = false

[[bin]]
name = "rsbuzz"
path = "fuzz_targets/rsbuzz.rs"
test = false
doc = false
bench = false


[profile.release]
overflow-checks = true
panic = "abort"
debug = true