[package]
name = "automated_fuzzer-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
lofty = { git = "https://github.com/Serial-ATA/lofty-rs/", optional = true }
font-kit = { git = "https://github.com/servo/font-kit.git", features = ["source"], optional = true }
image = { git = "https://github.com/image-rs/image", default-features = false, features = ["avif", "bmp", "dds", "ff", "gif", "hdr", "ico", "png", "pnm", "qoi", "tga", "webp"], optional = true } # All except jpg, tiff and openexr
lopdf = { git = "https://github.com/J-F-Liu/lopdf.git", optional = true }
rustybuzz = { git = "https://github.com/RazrFalcon/rustybuzz.git", optional = true }
#pdf = { git = "https://github.com/pdf-rs/pdf/" , optional = true}
symphonia = { git = "https://github.com/pdeljanov/Symphonia.git", features = ["all"], optional = true }
zip = { git = "https://github.com/zip-rs/zip2.git", optional = true }
full_moon = { git = "https://github.com/Kampfkarren/full-moon.git", features = ["roblox", "lua54"], optional = true }

dicom-core = { git = "https://github.com/Enet4/dicom-rs", optional = true }
dicom-object = { git = "https://github.com/Enet4/dicom-rs", optional = true }
dicom-ul = { git = "https://github.com/Enet4/dicom-rs", optional = true }
dicom-encoding = { git = "https://github.com/Enet4/dicom-rs", optional = true }
dicom-dictionary-std = { git = "https://github.com/Enet4/dicom-rs", optional = true }
dicom-transfer-syntax-registry = { git = "https://github.com/Enet4/dicom-rs", optional = true }
dicom-dump = { git = "https://github.com/Enet4/dicom-rs", optional = true }
dicom-json = { git = "https://github.com/Enet4/dicom-rs", optional = true }

[features]
default = []
lofty_f = ["lofty"]
font_kit_f = ["font-kit"]
image_f = ["image"]
lopdf_f = ["lopdf"]
rsbuzz_f = ["rustybuzz"]
#pdf_rs_f = ["pdf"]
symphonia_f = ["symphonia"]
zip_rs_f = ["zip"]
full_moon_f = ["full_moon"]
dicom_f = ["dicom-core", "dicom-object", "dicom-ul", "dicom-encoding", "dicom-dictionary-std", "dicom-transfer-syntax-registry", "dicom-dump", "dicom-json"]





[[bin]]
name = "lofty"
path = "fuzz_targets/lofty.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dicom"
path = "fuzz_targets/dicom.rs"
test = false
doc = false
bench = false

[[bin]]
name = "font_kit"
path = "fuzz_targets/font_kit.rs"
test = false
doc = false
bench = false

[[bin]]
name = "zip_rs"
path = "fuzz_targets/zip_rs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "full_moon"
path = "fuzz_targets/full_moon.rs"
test = false
doc = false
bench = false

[[bin]]
name = "image"
path = "fuzz_targets/image.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lopdf"
path = "fuzz_targets/lopdf.rs"
test = false
doc = false
bench = false

#[[bin]]
#name = "pdf_rs"
#path = "fuzz_targets/pdf_rs.rs"
#test = false
#doc = false
#bench = false

[[bin]]
name = "rsbuzz"
path = "fuzz_targets/rsbuzz.rs"
test = false
doc = false
bench = false


[profile.release]
overflow-checks = true
panic = "abort"
debug = true