[package]
name = "automated_fuzzer-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3.14.0"
rand = "0.9.0"

lofty = { git = "https://github.com/Serial-ATA/lofty-rs/", optional = true }
font-kit = { git = "https://github.com/servo/font-kit.git", features = ["source"], optional = true }
image = { git = "https://github.com/image-rs/image", default-features = false, features = ["avif", "bmp", "dds", "ff", "gif", "hdr", "ico", "png", "pnm", "qoi", "tga", "webp"], optional = true } # All except jpg, tiff and openexr
lopdf = { git = "https://github.com/J-F-Liu/lopdf.git", optional = true }
rustybuzz = { git = "https://github.com/RazrFalcon/rustybuzz.git", optional = true }
#pdf = { git = "https://github.com/pdf-rs/pdf/" , optional = true}
symphonia = { git = "https://github.com/pdeljanov/Symphonia.git", features = ["all"], optional = true }
#symphonia = { git = "https://github.com/sscobici/Symphonia.git", features = ["all"], branch = "mp4-panic-fixes", optional = true}
zip = { git = "https://github.com/zip-rs/zip2.git", optional = true }

dicom-core = { git = "https://github.com/Enet4/dicom-rs", optional = true }
dicom-object = { git = "https://github.com/Enet4/dicom-rs", optional = true }
dicom-ul = { git = "https://github.com/Enet4/dicom-rs", optional = true }
dicom-encoding = { git = "https://github.com/Enet4/dicom-rs", optional = true }
dicom-dictionary-std = { git = "https://github.com/Enet4/dicom-rs", optional = true }
dicom-transfer-syntax-registry = { git = "https://github.com/Enet4/dicom-rs", optional = true }
dicom-dump = { git = "https://github.com/Enet4/dicom-rs", optional = true }
dicom-json = { git = "https://github.com/Enet4/dicom-rs", optional = true }
i-slint-compiler = { git = "https://github.com/slint-ui/slint.git", optional = true }
spin_on = { version = "0.1.1", optional = true }
image_hasher = { git = "https://github.com/qarmin/img_hash.git", optional = true }
image_crates = { package = "image", version = "0.25.0", default-features = false, features = ["avif", "bmp", "dds", "ff", "gif", "hdr", "ico", "png", "pnm", "qoi", "tga", "webp"], optional = true }
nom-exif = { git = "https://github.com/mindeng/nom-exif", optional = true}
vid_dup_finder_lib = { git = "https://github.com/Farmadupe/vid_dup_finder_lib", optional = true , rev = "c90c5cafb51e2a437032c7c3dc75b19bc5d49f8b"}
ffmpeg_cmdline_utils = { git = "https://github.com/Farmadupe/vid_dup_finder_lib", optional = true, rev = "c90c5cafb51e2a437032c7c3dc75b19bc5d49f8b" }
vid_dup_finder_lib_gst = { git = "https://github.com/Farmadupe/vid_dup_finder_lib", optional = true , rev = "c90c5cafb51e2a437032c7c3dc75b19bc5d49f8b", package = "vid_dup_finder_lib"}
ffmpeg_cmdline_utils_gst = { git = "https://github.com/Farmadupe/vid_dup_finder_lib", optional = true, rev = "c90c5cafb51e2a437032c7c3dc75b19bc5d49f8b", package = "ffmpeg_cmdline_utils" }

[features]
default = []
all = ["lofty_f", "font_kit_f", "image_f", "lopdf_f", "rsbuzz_f", "symphonia_f", "zip_rs_f", "dicom_f"]
lofty_f = ["lofty"]
font_kit_f = ["font-kit"]
image_f = ["image"]
lopdf_f = ["lopdf"]
rsbuzz_f = ["rustybuzz"]
#pdf_rs_f = ["pdf"]
symphonia_f = ["symphonia"]
zip_rs_f = ["zip"]
dicom_f = ["dicom-core", "dicom-object", "dicom-ul", "dicom-encoding", "dicom-dictionary-std", "dicom-transfer-syntax-registry", "dicom-dump", "dicom-json"]
slint_f = ["i-slint-compiler", "spin_on"]
image_hasher_f = ["image_hasher", "image_crates"]
nom_exif_f = ["nom-exif"]
vidduplicate_f = ["vid_dup_finder_lib", "ffmpeg_cmdline_utils"]
vidduplicategst_f = ["vid_dup_finder_lib_gst", "ffmpeg_cmdline_utils_gst"]

[[bin]]
name = "lofty"
path = "fuzz_targets/lofty.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dicom"
path = "fuzz_targets/dicom.rs"
test = false
doc = false
bench = false

[[bin]]
name = "font_kit"
path = "fuzz_targets/font_kit.rs"
test = false
doc = false
bench = false

[[bin]]
name = "zip_rs"
path = "fuzz_targets/zip_rs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "image"
path = "fuzz_targets/image.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lopdf"
path = "fuzz_targets/lopdf.rs"
test = false
doc = false
bench = false

#[[bin]]
#name = "pdf_rs"
#path = "fuzz_targets/pdf_rs.rs"
#test = false
#doc = false
#bench = false

[[bin]]
name = "rsbuzz"
path = "fuzz_targets/rsbuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "slint"
path = "fuzz_targets/slint.rs"
test = false
doc = false
bench = false

[[bin]]
name = "image_hasher"
path = "fuzz_targets/image_hasher.rs"
test = false
doc = false
bench = false

[[bin]]
name = "nom_exif"
path = "fuzz_targets/nom_exif.rs"
test = false
doc = false
bench = false

[[bin]]
name = "symphonia"
path = "fuzz_targets/symphonia.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vidduplicate"
path = "fuzz_targets/vidduplicate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vidduplicategst"
path = "fuzz_targets/vidduplicategst.rs"
test = false
doc = false
bench = false


[profile.release]
overflow-checks = true
debug-assertions = true
panic = "abort"
debug = true
