[package]
name = "test_red_knot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#oxc = { git = "https://github.com/oxc-project/oxc" }
#oxc_span = { git = "https://github.com/oxc-project/oxc" }
#oxc_linter = { git = "https://github.com/oxc-project/oxc" }
#oxc_diagnostics = { git = "https://github.com/oxc-project/oxc" }

rayon = "1.9.0"
rand = "0.9.0-alpha.0"
walkdir = "2.5.0"
#adb_client = "1.0.2"
#tokio = {version = "1.38.0" , features = ["full"] }
#crossbeam-channel = "0.5.13"
chrono = "0.4.38"
once_cell = "1.20.2"
#exr = {git = "https://github.com/johannesvollmer/exrs.git", features = []}
#libc = "0.2.155"

[profile.release]
debug = true
overflow-checks = true
panic = "abort"
