[package]
name = "full_moon"
version = "0.1.0"
edition = "2021"

[dependencies]
fuzz_utils = { path = "../fuzz_utils" }
full_moon = { git = "https://github.com/Kampfkarren/full-moon.git", features = [ "roblox", "lua54"] }

[profile.release]
overflow-checks = true
panic = "abort"
debug = true
debug-assertions = true