[package]
name = "image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzz_utils = { path = "../fuzz_utils" }
image = { git = "https://github.com/image-rs/image", default-features = false, features = ["avif", "bmp",  "ff", "gif",  "ico", "png", "pnm", "qoi", "tga", "webp", "jpeg"]}

[profile.release]
overflow-checks = true
panic = "abort"
debug = true
debug-assertions = true