[package]
name = "rawler"
version = "0.1.0"
edition = "2021"

[dependencies]
fuzz_utils = { path = "../fuzz_utils" }
rawler = { git = "https://github.com/dnglab/dnglab.git" }
image = { version = "0.25.6", features = ["jpeg"], default-features = false }

[profile.release]
overflow-checks = true
panic = "abort"
debug = true
debug-assertions = true