[package]
name = "resvg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzz_utils = { path = "../fuzz_utils" }
resvg = {git = "https://github.com/linebender/resvg"}

[profile.release]
overflow-checks = true
panic = "abort"
debug = true
debug-assertions = true