[package]
name = "dicom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dicom = { git = "https://github.com/Enet4/dicom-rs" }
rand = "0.8"
smallvec = "1.11"
walkdir = "2.5.0"

[profile.release]
overflow-checks = true
panic = "abort"
debug = true
debug-assertions = true