[package]
name = "image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { git = "https://github.com/image-rs/image" }
zune-jpeg = { git = "https://github.com/etemesi254/zune-image.git" }

[profile.release]
overflow-checks = true