[package]
name = "little_exif_fuzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
little_exif = "0.6.20"
walkdir = "2.5.0"


[profile.release]
overflow-checks = true
panic = "abort"
debug = true
debug-assertions = true

