[package]
name = "pdf_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf = {git = "https://github.com/pdf-rs/pdf/"}
walkdir = "2.5.0"

[profile.release]
overflow-checks = true
panic = "abort"
debug = true
debug-assertions = true