[package]
name = "rust_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustpython-ast = "0.2.0"
rustpython-parser = "0.2.0"
rayon = "1.7.0"


[profile.release]
overflow-checks = true
panic = "abort"
debug = true