[package]
name = "symphonia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symphonia = { version = "0.5", features = ["all"] }
walkdir = "2"

[profile.release]
overflow-checks = true
panic = "abort"
debug = true