[package]
name = "symphonia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symphonia = { git = "https://github.com/pdeljanov/Symphonia.git", features = ["all"], branch = "dev-0.6"}
walkdir = "2"

[profile.release]
overflow-checks = true
panic = "abort"
debug = true
debug-assertions = true