[package]
name = "ziprs"
version = "0.1.0"
edition = "2021"

[dependencies]
# aes-crypto = ["aes", "constant_time_eq", "hmac", "pbkdf2", "sha1", "rand", "zeroize"]
#chrono = ["chrono/default"]
#_deflate-any = []
#_all-features = [] # Detect when --all-features is used
#deflate = ["flate2/rust_backend", "deflate-zopfli", "deflate-flate2"]
#deflate-flate2 = ["flate2/any_impl", "_deflate-any"]
## DEPRECATED: previously enabled `flate2/miniz_oxide` which is equivalent to `flate2/rust_backend`
#deflate-miniz = ["deflate", "deflate-flate2"]
#deflate-zlib = ["flate2/zlib", "deflate-flate2"]
#deflate-zlib-ng = ["flate2/zlib-ng", "deflate-flate2"]
#deflate-zopfli = ["zopfli", "_deflate-any"]
#lzma = ["lzma-rs/stream"]
#unreserved = []
#default = [
#    "aes-crypto",
#    "bzip2",
#    "deflate64",
#    "deflate",
#    "lzma",
#    "time",
#    "zstd",
#]
zip = { version = "2.1" }
walkdir = "2.5.0"

[profile.release]
overflow-checks = true
panic = "abort"
debug = true